# pccx-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Cargo.toml  README.md  RELEASING.md  dummy_trace.pccx  imgui.ini  pccx-lab-bootstrap-task.md  todolist.md
.github/workflows/: ci.yml
crates/ai_copilot/src/: lib.rs
crates/authoring/src/: api_spec.rs  block_diagram.rs  fsm_diagram.rs  isa_spec.rs  lib.rs  sv_parser.rs
crates/core/src/: lib.rs  results.rs  runner.rs  status.rs  theme.rs  workflows.rs
crates/core/tests/: diagnostics_handoff_cli.rs  public_boundary_docs.rs  public_claim_guards.rs  status_cli.rs  workflow_results_cli.rs  workflow_runner_cli.rs  workflows_cli.rs
crates/cx/src/: lib.rs
crates/evolve/src/: speculative.rs
crates/lsp/: CHANGELOG.md  Cargo.toml
crates/lsp/src/: lib.rs  monaco_bridge.rs
crates/remote/: openapi.yaml
crates/remote/src/: lib.rs
crates/reports/src/: lib.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/verification/: Cargo.toml
crates/verification/src/: golden_diff.rs  lib.rs  robust_reader.rs
cycle/: README.md  ROUNDS.md  STATE.json  driver.md
cycle/round_001/: implemented_T3.md  judge_report.md
cycle/round_002/: judge_report.md  research_findings.md
cycle/round_003/: implemented_T1.md  implemented_T3.md  roadmap.md
cycle/round_004/: implemented_T2.md  research_findings.md  roadmap.md
cycle/round_005/: implemented_T3.md  judge_report.md  research_findings.md
cycle/round_006/: implemented_T-1.md  implemented_T-2.md  implemented_T-3.md  judge_report.md  research_findings.md  roadmap.md  user_directive.md
docs/: CLI_CORE_BOUNDARY.md  conf.py  getting-started.md  index.rst  pccx-format.md
docs/design/: architecture_adoption.md  phase1_crate_split.md  phase2_intellisense.md  phase4_insane_reports.md  phase5_alphaevolve.md
docs/examples/: diagnostics-envelope.example.json  run-status.example.json  theme-tokens.example.json  workflow-descriptors.example.json  workflow-results.example.json  workflow-runner-blocked.example.json
docs/ko/: conf.py  getting-started.md  index.rst  pccx-format.md
docs/ko/modules/: node-editor.md  overview.md
docs/modules/: node-editor.md  overview.md
docs/releases/: v0.1.0-alpha.md
docs/user-guide/: pccx-lab-user-guide.md
hw/sim/coverage/: schema.md
hw/sim/coverage/fixtures/: run_a.jsonl  run_b.jsonl  run_c.jsonl
hw/sim/reports/: kv260_timing_post_impl.rpt
scripts/: README.md  doctor.sh  pccx-lab-boundary-smoke.sh  run_dev.sh  setup_env.sh  test-boundary-smoke-fixtures.sh  validate-local.sh
scripts/fixtures/boundary-smoke/base/crates/core/src/: status.rs
scripts/fixtures/boundary-smoke/base/docs/: CLI_CORE_BOUNDARY.md
scripts/fixtures/boundary-smoke/base/docs/examples/: diagnostics-envelope.example.json  launcher-diagnostics-handoff.example.json  run-status.example.json  theme-tokens.example.json  workflow-descriptors.example.json  workflow-proposals.example.json  workflow-results.example.json  workflow-runner-blocked.example.json
scripts/fixtures/boundary-smoke/base/fixtures/: missing_endmodule.sv  ok_module.sv
scripts/fixtures/boundary-smoke/cases/malformed-json/overlay/docs/examples/: workflow-descriptors.example.json
scripts/fixtures/boundary-smoke/cases/missing-required-example/: remove.txt
src/ai_copilot/: Cargo.toml
src/ai_copilot/src/: lib.rs
src/core/: Cargo.toml
src/core/src/: bottleneck.rs  coverage.rs  lib.rs  pccx_format.rs  report.rs  roofline.rs  simulator.rs  speculative.rs  step_snapshot.rs  trace.rs  vivado_timing.rs
src/remote/: Cargo.toml
src/remote/src/: lib.rs
src/ui/: package-lock.json  package.json  vite.config.ts
src/ui/e2e/: test_markdown_report.py  test_run_verification.py  test_verify_tb_packer.py
src/ui/src/: App.css  App.tsx  BottleneckCard.tsx  BottomPanel.tsx  CanvasView.tsx  CodeEditor.tsx  ExtensionManager.tsx  FlameGraph.tsx  HardwareVisualizer.tsx  MenuBar.tsx  NodeEditor.tsx  PerfChart.tsx  ReportBuilder.tsx  ReportGenerator.tsx  Roofline.tsx  RooflineCard.tsx  ScenarioFlow.tsx  StatusBar.tsx  TestbenchAuthor.tsx  Timeline.tsx  VerificationRunner.tsx  VerificationSuite.tsx  WaveformViewer.tsx  i18n.tsx  main.tsx  monarch_sv.ts
src/ui/src-tauri/: Cargo.toml  tauri.conf.json
src/ui/src-tauri/src/: lib.rs  main.rs
src/ui/src/hooks/: useCycleCursor.ts  useLiveWindow.ts  useRafScheduler.ts  useVisibilityGate.ts
src/uvm_bridge/: Cargo.toml
src/uvm_bridge/src/: lib.rs
src/verification/: Cargo.toml
src/verification/src/: golden_diff.rs  lib.rs  robust_reader.rs
ui/: README.md  package-lock.json  package.json
ui/scripts/: local-assistant-guard-fixtures.mjs  local-assistant-guard.mjs
ui/scripts/fixtures/local-assistant-guard/: api-key-ui.fixture.ts  assistant-wording.fixture.ts  provider-fetch.fixture.ts  runtime-claims.fixture.ts  safe-local.fixture.ts
ui/src/: App.css  App.tsx  BottleneckCard.tsx  BottomPanel.tsx  CanvasView.tsx  CodeEditor.tsx  CommandPalette.tsx  CxPlayground.tsx  DiffView.tsx  ExtensionManager.tsx  FileTree.tsx  FlameGraph.tsx  HardwareVisualizer.tsx  LabStatusPanel.tsx  MainToolbar.tsx  MemoryDump.tsx  MenuBar.tsx  NodeEditor.tsx  OccupancyCalculator.tsx  ReportBuilder.tsx  ReportGenerator.tsx  Roofline.tsx  RooflineCard.tsx  ScenarioFlow.tsx  StatusBar.tsx  SynthStatusCard.tsx  TestbenchAuthor.tsx  ThemeContext.tsx  Timeline.tsx  TitleBar.tsx  VerificationRunner.tsx  VerificationSuite.tsx  WaveformViewer.tsx  i18n.tsx  keybindings.ts  labStatus.ts  monacoSetup.ts  useShortcuts.tsx
ui/src-tauri/: Cargo.toml
ui/src-tauri/src/: lib.rs
ui/src/hooks/: useCycleCursor.ts
