[workspace]
members = [
    "src/core",
    "src/reports",
    "src/verification",
    "src/authoring",
    "src/evolve",
    "src/remote",
    "src/uvm_bridge",
    "src/ai_copilot",
    "src/ui/src-tauri"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
