[workspace]
members = [
    "crates/core",
    "crates/reports",
    "crates/verification",
    "crates/authoring",
    "crates/evolve",
    "crates/remote",
    "crates/lsp",
    "crates/cx",
    "crates/schema",
    "crates/uvm_bridge",
    "crates/ai_copilot",
    "ui/src-tauri"
]
resolver = "2"

# Shared package metadata — individual crates inherit via
# `<field>.workspace = true`.  Bumping `version` here is what a
# release performs; cargo-release / release-please amplify that change
# across all members in a single PR.
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["hwkim-dev <54717101+hwkim-dev@users.noreply.github.com>"]
repository = "https://github.com/hwkim-dev/pccx-lab"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time"] }
async-trait = "0.1"
