[package]
name = "pccx-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ts-rs = { version = "10", features = ["serde-compat"] }

[dev-dependencies]
serde_json.workspace = true
