[package]
name = "pccx-verification"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
# Verification gate — golden-model diff + robust TOML/JSON reader.
# Golden-diff: end-to-end correctness (consultation report §6.2).
# Robust reader: tolerant config reads (consultation report §4).

[dependencies]
pccx-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
toml = "1.1.2"
thiserror.workspace = true
anyhow.workspace = true
