[package]
name = "pccx-ide"
version.workspace = true
description = "pccx-lab Tauri shell (IDE)"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pccx_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
pccx-core = { path = "../../crates/core" }
pccx-reports = { path = "../../crates/reports" }
pccx-ai-copilot = { path = "../../crates/ai_copilot" }
pccx-lsp = { path = "../../crates/lsp" }
pccx-authoring = { path = "../../crates/authoring" }
pccx-verification = { path = "../../crates/verification" }
